Heroku Django changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,27 @@
-autopep8==1.4.4
-Django==2.2.8
-pep8==1.7.1
-pycodestyle==2.5.0
-pytz==2018.5
-sqlparse==0.2.4
+appdirs==1.4.3
+asgiref==3.2.7
+cachelib==0.1.1
+certifi==2019.11.28
+click==7.1.1
+distlib==0.3.0
+dj-database-url==0.5.0
+Django==3.0.5
+django-heroku==0.3.1
+filelock==3.0.12
+Flask==1.1.1
+Flask-Session==0.3.2
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.1
+MarkupSafe==1.1.1
+mysqlclient==1.4.6
+numpy==1.19.1
+pipenv==2018.11.26
+psycopg2==2.8.6
+pytz==2019.3
+six==1.14.0
+sqlparse==0.3.1
+virtualenv==20.0.15
+virtualenv-clone==0.5.4
+Werkzeug==1.0.1
+whitenoise==5.2.0
