--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "python.pythonPath": "env\\Scripts\\python.exe",
+  "python.pythonPath": "C:\\Users\\Usern\\AppData\\Local\\Programs\\Python\\Python38\\python.exe",
   "editor.formatOnSave": true,
   "python.linting.pycodestyleEnabled": true,
   "python.linting.pylintEnabled": true,
